removed config files from authservice,api gateway modified