@@ -9,7 +9,44 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
+//@Configuration
+//public class GatewayConfig {
+//
+//    @Bean
+//    public RouteLocator customRouteLocator(RouteLocatorBuilder builder) {
+//        return builder.routes()
+//                .route("auth-service", r -> r.path("/api/auth/**")
+//                        .uri("lb://auth-service"))
+//                .route("user-service", r -> r.path("/api/users/**")
+//                        .uri("lb://user-service"))
+//                .route("company-service", r -> r.path("/api/companies/**")
+//                        .uri("lb://company-service"))
+//                .route("job-service", r -> r.path("/api/jobs/**")
+//                        .uri("lb://job-service"))
+//                .route("application-service", r -> r.path("/api/applications/**")
+//                        .uri("lb://application-service"))
+//                .route("experience-service", r -> r.path("/api/experience/**")
+//                        .uri("lb://experience-service"))
+//                .build();
+//    }
+//
+//    @Bean
+//    public CorsWebFilter corsWebFilter() {
+//        CorsConfiguration corsConfig = new CorsConfiguration();
+//        corsConfig.setAllowedOriginPatterns(Arrays.asList("*"));
+//        corsConfig.setMaxAge(3600L);
+//        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+//        corsConfig.setAllowCredentials(true);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", corsConfig);
+//
+//        return new CorsWebFilter(source);
+//    }
+//}
 @Configuration
 public class GatewayConfig {
 
@@ -17,7 +54,7 @@ public class GatewayConfig {
     public RouteLocator customRouteLocator(RouteLocatorBuilder builder) {
         return builder.routes()
                 .route("auth-service", r -> r.path("/api/auth/**")
-                        .uri("lb://auth-service"))
+                        .uri("lb://auth-service")) // Eureka-aware
                 .route("user-service", r -> r.path("/api/users/**")
                         .uri("lb://user-service"))
                 .route("company-service", r -> r.path("/api/companies/**")
@@ -34,11 +71,11 @@ public class GatewayConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOriginPatterns(Arrays.asList("*"));
-        corsConfig.setMaxAge(3600L);
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+        corsConfig.setAllowedOriginPatterns(List.of("*"));
+        corsConfig.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
+        corsConfig.setAllowedHeaders(List.of("*"));
         corsConfig.setAllowCredentials(true);
+        corsConfig.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
